# joblode

./: .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  codecov.yml  deny.toml  package.json  pnpm-lock.yaml
.flox/: env.json
.flox/env/: manifest.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
crates/joblode-core/: Cargo.toml
crates/joblode-core/src/: lib.rs
crates/joblode-core/tests/: search.rs
crates/joblode-rank/src/: gemini.rs  lib.rs  taste.rs
crates/joblode-server/: Cargo.toml
crates/joblode-server/src/: app_ui.rs  dto.rs  http.rs  main.rs  mcp.rs  ranking.rs  search.rs  searchapi.rs  semantic.rs
crates/joblode-server/tests/: http_transport.rs
crates/jobscout-core/: Cargo.toml
crates/jobscout-server/: Cargo.toml
docs/: DESIGN.md  MCP.md  ORCHESTRATION.md  RUST.md
plugins/joblode/: README.md
plugins/joblode/commands/: job-search.md
plugins/joblode/skills/job-search/: SKILL.md
testdata/: fixture.parquet  rank_fixture.parquet
web/: index.html  package.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  McpApp.test.tsx  McpApp.tsx  api.test.ts  api.ts  lib.test.ts  lib.ts  main.tsx  types.ts
web/src/components/: FilterSidebar.tsx  JobDetail.tsx  JobDrawer.tsx  RankPanel.test.tsx  RankPanel.tsx  ResultsTable.test.tsx  ResultsTable.tsx
