[package]
name = "joblode-core"
description = "Search, retrieval, and ranking over the open-jobs dataset."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
duckdb = { version = "1.10504.0", features = ["bundled", "parquet"] }
serde = { version = "1", features = ["derive"] }
schemars = "1"
