[package]
name = "joblode-server"
description = "axum HTTP + SSE + MCP server for joblode."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "joblode-server"
path = "src/main.rs"

[dependencies]
joblode-core = { workspace = true }
