[package]
name = "joblode-server"
description = "axum HTTP + SSE + MCP server for joblode."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "joblode-server"
path = "src/main.rs"

[dependencies]
joblode-core = { workspace = true }
rmcp = { version = "1.7", features = [
    "server",
    "client",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
    "io-util",
    "net",
    "signal",
    "sync",
] }
tokio-util = "0.7"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
# Plain HTTP client for the streamable-HTTP transport test; no TLS needed for 127.0.0.1.
reqwest = { version = "0.12", default-features = false }
# SIGINT the spawned server so it shuts down gracefully (and flushes coverage).
libc = "0.2"
